--- a/index.html
+++ b/index.html
@@ -226,23 +226,11 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2505.22037"><b>Jailbreak Distillation: Renewable Safety Benchmarking.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Xiawei Wang, A S M Iftekhar, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Kyle Jackson. <br />   <font color="Gray">arXiv preprint arXiv:2505.22037</font>, 2025. <font size=-1><a href="https://github.com/microsoft/jailbreak-distillation">[data]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2505.20321"><b>BiomedSQL: Text-to-SQL for Scientific Reasoning on Biomedical Knowledge Bases.</b></a>  <br />    Mathew J. Koretsky, Maya Willey, Adi Asija, Owen Bianchi, Chelsea X. Alvarado, Tanay Nayak, Nicole Kuznetsov, Sungwon Kim, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.20321</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/BiomedSQL">[data]</a> <a href="https://github.com/NIH-CARD/biomedsql">[code]</a></font></p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2505.18148"><b>Lost in the Haystack: Smaller Needles are More Difficult for LLMs to Find.</b></a>  <br />    Owen Bianchi, Mathew J. Koretsky, Maya Willey, Chelsea X. Alvarado, Tanay Nayak, Adi Asija, Nicole Kuznetsov, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.18148</font>, 2025. <font size=-1><a href="https://github.com/NIH-CARD/LostInTheHaystack">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2504.19395"><b>ICL Ciphers: Quantifying "Learning&rsquo;&rsquo; in In-Context Learning via Substitution Ciphers.</b></a>  <br />    Zhouxiang Fang, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Muhan Gao, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.19395</font>, 2025. <font size=-1><a href="https://github.com/jhu-CLSP/icl-ciphers">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2504.16046"><b>Certified Mitigation of Worst-Case LLM Copyright Infringement.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Jiacan Yu, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.16046</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -254,11 +242,27 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, William Gantt Walden, Kate Sanders, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, William Jurayj, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, Weiqi Wang, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2503.21717</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2505.22037"><b>Jailbreak Distillation: Renewable Safety Benchmarking.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Xiawei Wang, A S M Iftekhar, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Kyle Jackson. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/microsoft/jailbreak-distillation">[data]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/?"><b>Evaluating the Evaluators: Are readability metrics good measures of readability?</b></a>  <br />    Isabel Cachola, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Mark Dredze. <br />   <font color="Gray">arXiv preprint arXiv:?</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/eval-the-eval-readability">[code]</a></font></p>
+<li><p><a href="?"><b>LLM Sycophancy under User Rebuttal.</b></a>  <br />    Sungwon Kim and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, William Gantt Walden, Kate Sanders, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, William Jurayj, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, Weiqi Wang, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/?"><b>Evaluating the Evaluators: Are readability metrics good measures of readability?</b></a>  <br />    Isabel Cachola, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Mark Dredze. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/eval-the-eval-readability">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2504.16046"><b>Certified Mitigation of Worst-Case LLM Copyright Infringement.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Jiacan Yu, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2504.19395"><b>ICL Ciphers: Quantifying "Learning&rsquo;&rsquo; in In-Context Learning via Substitution Ciphers.</b></a>  <br />    Zhouxiang Fang, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Muhan Gao, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1><a href="https://github.com/jhu-CLSP/icl-ciphers">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -599,7 +603,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-18 06:52:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-21 09:00:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
