--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Other affiliations:</p>
 </ul>
 <p><h2 id="teaching">Teaching</h2></p>
 <ul>
-<li><p>CS 601.471/671, NLP: Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/sp2023/">Spring 2023</a>, <a href="https://self-supervised.cs.jhu.edu/sp2024/">Spring 2024</a>, <a href="https://self-supervised.cs.jhu.edu/sp2025/">Spring 2025</a> (not teaching in Spring 2026; apologies to all students who wanted to this course)</p>
+<li><p>CS 601.471/671, NLP: Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/sp2023/">Spring 2023</a>, <a href="https://self-supervised.cs.jhu.edu/sp2024/">Spring 2024</a>, <a href="https://self-supervised.cs.jhu.edu/sp2025/">Spring 2025</a> (not teaching in Spring 2026; apologies to all students who wanted to take this course)</p>
 </li>
 <li><p>CS 601.771, Advances in Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/fa2022/">Fall 2022</a>, <a href="https://self-supervised.cs.jhu.edu/fa2024/">Fall 2024</a>, <a href="https://self-supervised.cs.jhu.edu/fa2025/">Fall 2025</a></p>
 </li>
@@ -603,7 +603,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-21 09:03:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-21 18:52:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
