--- a/index.html
+++ b/index.html
@@ -302,10 +302,6 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2411.01101"><b>Self-Consistency Falls Short! The Adverse Effects of Positional Bias on Long-Context Problems.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Transactions of the Association for Computational Linguistics (TACL)</font>, 2025. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/pdf/2411.11844"><b>GenEx: Generating an Explorable World.</b></a>  <br />    <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/Jieneng_GenEx_Short_Jan.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2025_genex/Genex_ICLR_Poster_white_background.pdf">[poster]</a> <a href="https://generative-world-explorer.github.io/">[project]</a> <a href="https://www.youtube.com/channel/UCWWiAEF7PMk-OK0-rwGITIg">[demo]</a> <a href="https://arxiv.org/abs/2412.09624">[blog]</a></font></p>
 </li>
 </ul>
@@ -327,6 +323,10 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://www.acpjournals.org/doi/abs/10.7326/ANNALS-25-00012"><b>Large Language Models for Screening Search Results in Systematic Reviews: Are We There Yet?</b></a>  <br />    S Swaroop Vedula and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annals of Internal Medicine</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2411.01101"><b>Self-Consistency Falls Short! The Adverse Effects of Positional Bias on Long-Context Problems.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -603,7 +603,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-21 18:52:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-26 09:28:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
