--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2411.01101"><b>Self-Consistency Falls Short! The Adverse Effects of Positional Bias on Long-Context Problems.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.01101</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2505.22037"><b>Jailbreak Distillation: Renewable Safety Benchmarking.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Xiawei Wang, A S M Iftekhar, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Kyle Jackson. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/microsoft/jailbreak-distillation">[data]</a></font></p>
 </li>
 </ul>
@@ -323,10 +327,6 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://www.acpjournals.org/doi/abs/10.7326/ANNALS-25-00012"><b>Large Language Models for Screening Search Results in Systematic Reviews: Are We There Yet?</b></a>  <br />    S Swaroop Vedula and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annals of Internal Medicine</font>, 2025. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2411.01101"><b>Self-Consistency Falls Short! The Adverse Effects of Positional Bias on Long-Context Problems.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -603,7 +603,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-26 09:28:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-26 12:36:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
