--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2506.22724"><b>The Translation Barrier Hypothesis: Multilingual Generation with Large Language Models Suffers from Implicit Translation Failure.</b></a>  <br />    Niyati Bafna, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, David R. Mortensen, David Yarowsky, Hale Sirin and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.22724</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/translation-barrier">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2506.22724"><b>The Translation Barrier Hypothesis: Multilingual Generation with Large Language Models Suffers from Implicit Translation Failure.</b></a>  <br />    <a href="https://niyatibafna.github.io/"><font color="Black"> Niyati Bafna</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, David R. Mortensen, <a href="https://www.cs.jhu.edu/~yarowsky/"><font color="Black"> David Yarowsky</font></a>, Hale Sirin and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.22724</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/translation-barrier">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -226,7 +226,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2505.20321"><b>BiomedSQL: Text-to-SQL for Scientific Reasoning on Biomedical Knowledge Bases.</b></a>  <br />    Mathew J. Koretsky, Maya Willey, Adi Asija, Owen Bianchi, Chelsea X. Alvarado, Tanay Nayak, Nicole Kuznetsov, Sungwon Kim, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.20321</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/BiomedSQL">[data]</a> <a href="https://github.com/NIH-CARD/biomedsql">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2505.20321"><b>BiomedSQL: Text-to-SQL for Scientific Reasoning on Biomedical Knowledge Bases.</b></a>  <br />    Mathew J. Koretsky, Maya Willey, Adi Asija, Owen Bianchi, Chelsea X. Alvarado, Tanay Nayak, Nicole Kuznetsov, <a href="https://sungwon-kim.com/"><font color="Black"> Sungwon Kim</font></a>, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.20321</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/BiomedSQL">[data]</a> <a href="https://github.com/NIH-CARD/biomedsql">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -234,11 +234,11 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2504.13834"><b>Science Hierarchography: Hierarchical Abstractions of Scientific Literature.</b></a>  <br />    Muhan Gao, Jash Shah, Weiqi Wang and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.13834</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/science-hierarchography/">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2504.13834"><b>Science Hierarchography: Hierarchical Abstractions of Scientific Literature.</b></a>  <br />    Muhan Gao, Jash Shah, <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.13834</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/science-hierarchography/">[data]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2504.10284"><b>Can LLMs Generate Tabular Summaries of Science Papers? Rethinking the Evaluation Protocol.</b></a>  <br />    Weiqi Wang, <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, Yangqiu Song, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.10284</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/arXiv2Table">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2504.10284"><b>Can LLMs Generate Tabular Summaries of Science Papers? Rethinking the Evaluation Protocol.</b></a>  <br />    <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, Yangqiu Song, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.10284</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/arXiv2Table">[data]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -250,15 +250,15 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="?"><b>LLM Sycophancy under User Rebuttal.</b></a>  <br />    Sungwon Kim and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1></font></p>
+<li><p><a href="?"><b>LLM Sycophancy under User Rebuttal.</b></a>  <br />    <a href="https://sungwon-kim.com/"><font color="Black"> Sungwon Kim</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, William Gantt Walden, Kate Sanders, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, William Jurayj, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, Weiqi Wang, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://wgantt.github.io/personal-website/"><font color="Black"> William Gantt Walden</font></a>, <a href="https://katesanders9.github.io/"><font color="Black"> Kate Sanders</font></a>, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, William Jurayj, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/?"><b>Evaluating the Evaluators: Are readability metrics good measures of readability?</b></a>  <br />    Isabel Cachola, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Mark Dredze. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/eval-the-eval-readability">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2508.19221"><b>Evaluating the Evaluators: Are readability metrics good measures of readability?</b></a>  <br />    <a href="https://isabelcachola.com/"><font color="Black"> Isabel Cachola</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Mark Dredze. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/eval-the-eval-readability">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -266,7 +266,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2504.19395"><b>ICL Ciphers: Quantifying "Learning&rsquo;&rsquo; in In-Context Learning via Substitution Ciphers.</b></a>  <br />    Zhouxiang Fang, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Muhan Gao, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1><a href="https://github.com/jhu-CLSP/icl-ciphers">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2504.19395"><b>ICL Ciphers: Quantifying "Learning&rsquo;&rsquo; in In-Context Learning via Substitution Ciphers.</b></a>  <br />    <a href="https://zhouxiangfang.github.io/"><font color="Black"> Zhouxiang Fang</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Muhan Gao, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2025. <font size=-1><a href="https://github.com/jhu-CLSP/icl-ciphers">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -278,7 +278,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2407.03572"><b>Core: Robust Factual Precision Scoring with Informative Sub-Claim Identification.</b></a>  <br />    <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Seth Ebner, Miriam Wanner, Kate Sanders, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2025. <font size=-1><a href="https://github.com/zipJiang/Core">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2407.03572"><b>Core: Robust Factual Precision Scoring with Informative Sub-Claim Identification.</b></a>  <br />    <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Seth Ebner, Miriam Wanner, <a href="https://katesanders9.github.io/"><font color="Black"> Kate Sanders</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2025. <font size=-1><a href="https://github.com/zipJiang/Core">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -302,7 +302,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, <a href="https://yeganehkordi.github.io/"><font color="Black"> Yeganeh Kordi</font></a>, Tanay Nayak, Adi Asija, <a href="https://homes.cs.washington.edu/~yizhongw/"><font color="Black"> Yizhong Wang</font></a>, Kate Sanders, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/turking-bench">[data]</a> <a href="http://danielkhashabi.com/files/2025_turkingbench/turking-bench-naacl.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=BXRynpaWhTw">[talk]</a> <a href="https://turkingbench.github.io/">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, <a href="https://yeganehkordi.github.io/"><font color="Black"> Yeganeh Kordi</font></a>, Tanay Nayak, Adi Asija, <a href="https://homes.cs.washington.edu/~yizhongw/"><font color="Black"> Yizhong Wang</font></a>, <a href="https://katesanders9.github.io/"><font color="Black"> Kate Sanders</font></a>, <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/turking-bench">[data]</a> <a href="http://danielkhashabi.com/files/2025_turkingbench/turking-bench-naacl.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=BXRynpaWhTw">[talk]</a> <a href="https://turkingbench.github.io/">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -603,7 +603,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-26 12:36:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-28 16:18:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
