--- a/index.html
+++ b/index.html
@@ -218,11 +218,15 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2509.02534"><b>Jointly Reinforcing Diversity and Quality in Language Model Generations.</b></a>  <br />    <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, Yiming Zhang, Ping Yu, Swarnadeep Saha, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Jason Weston, Jack Lanchantin and Tianlu Wang. <br />   <font color="Gray">arXiv preprint arXiv:2509.02534</font>, 2025. <font size=-1><a href="https://github.com/facebookresearch/darling">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2506.22724"><b>The Translation Barrier Hypothesis: Multilingual Generation with Large Language Models Suffers from Implicit Translation Failure.</b></a>  <br />    <a href="https://niyatibafna.github.io/"><font color="Black"> Niyati Bafna</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, David R. Mortensen, <a href="https://www.cs.jhu.edu/~yarowsky/"><font color="Black"> David Yarowsky</font></a>, Hale Sirin and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.22724</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/translation-barrier">[code]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2506.11930"><b>Feedback Friction: LLMs Struggle to Fully Incorporate External Feedback.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Alvin Zhang, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.11930</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Feedback-Friction">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2506.11930"><b>Feedback Friction: LLMs Struggle to Fully Incorporate External Feedback.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://scholar.google.com/citations?user=BLkk5kYAAAAJ"><font color="Black"> Alvin Zhang</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.11930</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Feedback-Friction">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -242,10 +246,6 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2411.01101"><b>Self-Consistency Falls Short! The Adverse Effects of Positional Bias on Long-Context Problems.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2411.01101</font>, 2025. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2505.22037"><b>Jailbreak Distillation: Renewable Safety Benchmarking.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Xiawei Wang, A S M Iftekhar, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Kyle Jackson. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/microsoft/jailbreak-distillation">[data]</a></font></p>
 </li>
 </ul>
@@ -254,7 +254,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://wgantt.github.io/personal-website/"><font color="Black"> William Gantt Walden</font></a>, <a href="https://katesanders9.github.io/"><font color="Black"> Kate Sanders</font></a>, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, William Jurayj, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://wgantt.github.io/personal-website/"><font color="Black"> William Gantt Walden</font></a>, <a href="https://katesanders9.github.io/"><font color="Black"> Kate Sanders</font></a>, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, <a href="https://williamjurayj.com/"><font color="Black"> William Jurayj</font></a>, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -319,6 +319,10 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Discriminating Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2025_selfincorrect/2025_AAAI_Presentation.key">[slides]</a> <a href="https://youtu.be/z3-AMZ7bdCw">[talk]</a> <a href="https://docs.google.com/presentation/d/1Iku_cTG-B4LTycUSXKJ8UfF3L5zdROL0oRDmdl0VZD8/edit?usp=sharing">[poster]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2411.01101"><b>Self-Consistency Falls Short! The Adverse Effects of Positional Bias on Long-Context Problems.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Transactions of the Association for Computational Linguistics (TACL)</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -603,7 +607,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-28 16:18:56 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-03 07:54:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
