--- a/index.html
+++ b/index.html
@@ -218,15 +218,15 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2509.13930"><b>Linguistic Nepotism: Trading-off Quality for Language Preference in Multilingual RAG.</b></a>  <br />    Dayeon Ki, Marine Carpuat, Paul McNamee, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Eugene Yang, Dawn Lawrie and Kevin Duh. <br />   <font color="Gray">arXiv preprint arXiv:2509.1393</font>, 2025. <font size=-1><a href="https://github.com/dayeonki/linguistic_nepotism">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2509.02534"><b>Jointly Reinforcing Diversity and Quality in Language Model Generations.</b></a>  <br />    <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, Yiming Zhang, Ping Yu, Swarnadeep Saha, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Jason Weston, Jack Lanchantin and Tianlu Wang. <br />   <font color="Gray">arXiv preprint arXiv:2509.02534</font>, 2025. <font size=-1><a href="https://github.com/facebookresearch/darling">[code]</a></font></p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2506.22724"><b>The Translation Barrier Hypothesis: Multilingual Generation with Large Language Models Suffers from Implicit Translation Failure.</b></a>  <br />    <a href="https://niyatibafna.github.io/"><font color="Black"> Niyati Bafna</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, David R. Mortensen, <a href="https://www.cs.jhu.edu/~yarowsky/"><font color="Black"> David Yarowsky</font></a>, Hale Sirin and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.22724</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/translation-barrier">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2506.11930"><b>Feedback Friction: LLMs Struggle to Fully Incorporate External Feedback.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://scholar.google.com/citations?user=BLkk5kYAAAAJ"><font color="Black"> Alvin Zhang</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.11930</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Feedback-Friction">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -243,6 +243,10 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2504.10284"><b>Can LLMs Generate Tabular Summaries of Science Papers? Rethinking the Evaluation Protocol.</b></a>  <br />    <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, Yangqiu Song, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.10284</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/arXiv2Table">[data]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2506.11930"><b>Feedback Friction: LLMs Struggle to Fully Incorporate External Feedback.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://scholar.google.com/citations?user=BLkk5kYAAAAJ"><font color="Black"> Alvin Zhang</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Advances in Neural Information Processing Systems (NeurIPS)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Feedback-Friction">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -607,7 +611,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-03 07:54:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-18 15:34:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
